--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,38 +1,33 @@
 {
   "manifest_version": 3,
-  "name": "RAGx Companion",
+  "name": "RAGex Companion",
   "version": "2.1.0",
-  "description": "Smart web analysis and Q&A powered by RAGx - Your intelligent browsing companion",
-  "author": "RAGx Team",
+  "description": "Smart web analysis and Q&A powered by RAGex - Your intelligent browsing companion",
+  "author": "RAGex Team",
   "permissions": [
     "sidePanel",
-    "activeTab",
-    "scripting",
+    "tabs",
     "storage"
   ],
   "host_permissions": [
     "http://127.0.0.1:8000/*",
-    "http://localhost:8000/*"
+    "http://localhost:8000/*",
+    "http://*/*",
+    "https://*/*"
   ],
+  "content_security_policy": {
+    "script-src": [
+      "'self'",
+      "https://cdn.jsdelivr.net"
+    ]
+  },
+  "action": {
+    "default_title": "RAGex Companion"
+  },
   "background": {
     "service_worker": "background.js"
   },
-  "action": {
-    "default_title": "Open RAGx Panel",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  },
   "side_panel": {
     "default_path": "sidepanel.html"
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
   }
 }
