RAGex: Premium UI polish + deep-link citations + README refresh
Frontend
- Polish: glassmorphic tabs, header spacing, cohesive color variables (Warm Cream/Deep Blue)
- Feature: deep-linked citations using Chrome Text Fragments in sidepanel.js
- Cleanup: removed outdated frontend/index.html files

Backend
- Retriever: return sources as objects {url, snippet}; extract 15-word snippet for deep linking
- API: /query returns new source structure; preserves confidence + suggestions
- Stability: import/config adjustments; verified compilation in venv
- Maintenance: removed empty __init__.py files (namespace packages)

Docs & Scripts
- README: simplified 2-minute quick start with ASCII banner
- Requirements: updates for runtime
- Added scripts directory (setup/start/CLI) with validated syntax

Validation
- Compiled all backend modules successfully
- Verified manifest.json JSON validity
- Confirmed FastAPI app imports in venv

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@ python-dotenv
 aiohttp
 beautifulsoup4
 pypdf
-chromadb
+chromadb>=0.4.18
 sentence-transformers
-google-genai
+torch>=2.2.0
+playwright
 python-multipart
 openai
+textual
